Fix overflow

--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -22,6 +22,7 @@ section {
   margin-left: 10px;
   padding: 30px 10px 10px 10px;
   height: 150px;
+  overflow: auto;
 }
 
 .title {
